--- a/client/src/features/issuances/components/StatusBadge/StatusBadge.css
+++ b/client/src/features/issuances/components/StatusBadge/StatusBadge.css
@@ -36,6 +36,6 @@
 }
 
 .status-badge--published {
-    color: var(--unc-primary-red);
+    color: var(--status-published);
     background-color: var(--status-published-bg);
 }
