--- a/client/src/components/Button/Button.css
+++ b/client/src/components/Button/Button.css
@@ -54,6 +54,15 @@
   background-color: #dc2626;
 }
 
+.btn-success {
+  background-color: var(--success);
+  color: var(--white);
+}
+
+.btn-success:hover:not(:disabled) {
+  background-color: var(--success-dark, #218838);
+}
+
 /* Sizes */
 .btn-sm {
   padding: 0.375rem 0.75rem;
